--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="2주년 - 프로필 링크">
-    <meta property="og:description" content="D-day 2022.07.08. 나름 수작업이라구~">
+    <meta property="og:title" content="2주년 링크">
+    <meta property="og:description" content="직접 만들어봤다구!">
     <meta property="og:image" content="그림.png">
     <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
     <title> 최경진, 김현수 프로필 링크</title>
